# fattern

./: .gitignore  COMMERCIAL-LICENSE.md  NOTICE  PLAN.md  README.en.md  README.md  fattern.cmd  pyproject.toml
docs/: ai-clients.md  contract-cleanup-notes.md  developer.md  hosting.md  marker-rules.md  orchestration-rules.md  repository-hygiene.md  security-checklist.md  test-plan.md
schemas/: answers.schema.json  clarification.schema.json  common.schema.json  mcp-tools.schema.json  user-intent.schema.json
src/fattern/: __init__.py  __main__.py  advisor.py  cli.py  hosting.py  llm.py  quote.py  runs.py  web.py
src/fattern/engine/: __init__.py  dxf.py  layout.py  metrics.py  models.py
src/fattern/geometry/: __init__.py  polygon.py
src/fattern/jobs/: __init__.py  security.py  store.py
src/fattern/mcp/: __init__.py  http.py  runtime.py  schemas.py  server.py  stdio.py  tools.py  validation.py
src/fattern/orchestration/: __init__.py  chain.py  fabric_presets.py  intent.py
tests/: test_advisor_llm.py  test_cli.py  test_engine_dxf.py  test_engine_geometry.py  test_engine_layout.py  test_mcp_http.py  test_mcp_job_store.py  test_mcp_stdio.py  test_mcp_tools.py  test_orchestration_chain.py  test_orchestration_intent.py  test_report_csv.py  test_report_markdown.py  test_report_pdf.py  test_repository_hygiene.py  test_schemas.py  test_security_artifacts.py  test_security_review4.py  test_svg_renderer.py  test_web_ui.py
tests/fixtures/: open_lwpolyline.dxf  rectangle_lwpolyline.dxf  rectangle_polyline_r12.dxf  tshirts.dxf  unsupported_version.dxf
(+10 files in other folders)
